--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/zSorour/fast-typist-backend#readme",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.15",
     "@types/node": "^18.11.17",
     "prisma": "^4.7.1",
@@ -30,6 +31,8 @@
   },
   "dependencies": {
     "@prisma/client": "^4.7.1",
-    "express": "^4.18.2"
+    "bcrypt": "^5.1.0",
+    "express": "^4.18.2",
+    "zod": "^3.20.2"
   }
 }
