--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -11,3 +11,10 @@ services:
     volumes:
       # Mount the data directory to a volume so that it persists
       - ./pgdata:/var/lib/postgresql/data
+  redis:
+    container_name: fast-typist-redis
+    image: redis:latest
+    ports:
+      - '6379:6379'
+    volumes:
+      - ./redisdata:/data
