--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@prisma/client": "^4.7.1",
     "bcrypt": "^5.1.0",
     "express": "^4.18.2",
+    "redis": "^4.5.1",
     "zod": "^3.20.2"
   }
 }
