--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
   "homepage": "https://github.com/zSorour/fast-typist-backend#readme",
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.15",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.11.17",
+    "dotenv": "^16.0.3",
     "prisma": "^4.7.1",
     "ts-node-dev": "^2.0.0",
     "tsc-alias": "^1.8.2",
@@ -32,7 +35,9 @@
   "dependencies": {
     "@prisma/client": "^4.7.1",
     "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "redis": "^4.5.1",
     "zod": "^3.20.2"
   }
