--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,13 +30,12 @@
     // "moduleResolution": "node",                       /* Specify how TypeScript looks up a file from a given module specifier. */
     "baseUrl": "." /* Specify the base directory to resolve non-relative module names. */,
     "paths": {
-      "@routes/*": ["src/routes/*"],
-      "@controllers/*": ["src/controllers/*"],
       "@models/*": ["src/models/*"],
-      "@services/*": ["src/services/*"],
+      "@features/*": ["src/features/*"],
       "@schemas/*": ["src/schemas/*"],
       "@middlewares/*": ["src/middlewares/*"],
-      "@config/*": ["src/config/*"]
+      "@config/*": ["src/config/*"],
+      "@errors/*": ["src/errors/*"]
     } /* Specify a set of entries that re-map imports to additional lookup locations. */,
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     // "typeRoots": [],                                  /* Specify multiple folders that act like './node_modules/@types'. */
