--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "random-words": "^1.2.1",
     "redis": "^4.5.1",
+    "socket.io": "^4.5.4",
     "zod": "^3.20.2"
   }
 }
